--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Hello, World</title>
     </head>
     <body>
         <h1>Hello, World</h1>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
