--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Hello, World</h1>
+        <div id="app"></div>
         <script type="module" src="main.js"></script>
     </body>
 </html>
